--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale-1.0">
-    <title>Menu mobile</title>
+    <title>Benjamin le hacker</title>
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/styles-graphiques.css">
     <link rel="stylesheet" href="./css/mescss/styles-mise-en-page.css">
@@ -34,5 +34,31 @@
     </nav>
 
 </header>
+<body>
+<img src="img/codepoursuite/technologie.jpg" alt="technologie.jpg" width="218" height="149">
+<h1>Benjamin le hacker</h1>
+<p>
+    Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
+    lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
+    heureusement que la technologie existe.
+</p>
+<p>
+    <u>Benjamin : jamais sans son </u>
+    <u>ordinateur</u>
+    <u>, est un jeune pirate </u>
+    <u>informatique</u>
+    <u> à la recherche de sa </u>
+    <u>mère</u>
+</p>
+<p>
+    Internet fait partie de ton quotidien, que ce soit pour faire des
+    recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
+    « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
+    d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
+    est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
+    compétences informatiques afin de changer ses résultats scolaires lors d’un
+    test, pour lui et pour ses camarades de classe.
+</p>
+
 </body>
 </html>
