Article: Benjamin le hacker

--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -1,41 +1,18 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale-1.0">
-    <title>Benjamin le hacker</title>
-    <link rel="stylesheet" href="css/lib/normalize.css">
-    <link rel="stylesheet" href="./css/mescss/styles-graphiques.css">
-    <link rel="stylesheet" href="./css/mescss/styles-mise-en-page.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
-    <link rel="stylesheet" href="./css/mescss/typography.css">
+    <title>Code Poursuite</title>
 </head>
-<body class=" ">
-<header>
-    <h1><a href="">Menu mobile</a></h1>
-    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
-        <div class="nav-toggle-bar"></div>
-    </div>
-    <nav class="menu" >
-        <ul>
-            <li><a href="">Accueil</a></li>
-            <div id="trait_dessus"><hr></div>
-            <li><a href="">Benjamin le hacker</a></li>
-            <div id="trait_dessus"><hr></div>
-            <li><a href="">Pollution numérique</a></li>
-            <div id="trait_dessus"><hr></div>
-            <li><a href="">Moins polluer autrement</a></li>
-            <div id="trait_dessus"><hr></div>
-            <li><a href="">Autres projets</a></li>
-            <div id="trait_dessus"><hr></div>
-            <li><a href="">À propos</a></li>
-            <div id="trait_dessus"><hr></div>
-        </ul>
-    </nav>
-
-</header>
 <body>
-<img src="img/codepoursuite/technologie.jpg" alt="technologie.jpg" width="218" height="149">
+<p>
+    Data Code
+</p>
+<p>
+    Un clic ! C'est tout !
+</p>
+<img src="img/codepoursuite/technologie.jpg" alt="technologie.jpg" width="1024" height="609">
 <h1>Benjamin le hacker</h1>
 <p>
     Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
@@ -43,12 +20,8 @@
     heureusement que la technologie existe.
 </p>
 <p>
-    <u>Benjamin : jamais sans son </u>
-    <u>ordinateur</u>
-    <u>, est un jeune pirate </u>
-    <u>informatique</u>
-    <u> à la recherche de sa </u>
-    <u>mère</u>
+    Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
+    la recherche de sa mère
 </p>
 <p>
     Internet fait partie de ton quotidien, que ce soit pour faire des
@@ -59,6 +32,72 @@
     compétences informatiques afin de changer ses résultats scolaires lors d’un
     test, pour lui et pour ses camarades de classe.
 </p>
-
+<img src="img/codepoursuite/benjamin.jpg" alt="benjamin.jpg" width="1080" height="720">
+<p>
+    Il ne s’est pas seulement contenté de changeait ses notes, il a également
+    hacker les services secrets danois afin de télécharger beaucoup de dossiers
+    confidentiels. Ses dossiers contenaient des informations importantes sur sa
+    mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
+    montre une vidéo d’elle vivante. Malheureusement, lorsqu'il a hacker les
+    services secrets danois, ce qu'il ne savait pas c'est qu'ils aller le
+    poursuivre. Car au final, ils sont tous à la recherche de la même personne,
+    Anna la mère de Benjamin. Malgré cela, Benjamin et son amie Savannah, ont
+    fui les services secrets. Ils n'ont pas hésiter à jeter leurs portables
+    afin que personnes ne puissent les traquer.
+</p>
+<img src="img/codepoursuite/codage.jpg" alt="codage.jpg" width="1334" height="750">
+<p>
+    Cependant, Benjamin pollue sans le savoir
+</p>
+<p>
+    Le personnage principal pollue avec le numérique tout le long du film. On
+    peut voir qu’il laisse constamment ses appareils connectés et branchés et
+    qu’il ne les éteint jamais. Il les laisse allumé ou en veille. Benjamin
+    possède plusieurs exemplaires d’appareils (plus de deux ordinateurs,
+    plusieurs téléphones…), de plus, il laisse ouverts beaucoup d’onglets
+    internet dessus. En plus de tout cela, il télécharge énormément des
+    dossiers, dont peut lui serve, ses dossiers occupent donc beaucoup de place
+    sur ses appareils. Lorsqu’il quitte son domicile, Benjamin n’éteint jamais
+    sa box internet, ceci consomme énormément et provoque de la pollution
+    numérique. Dans le film, on peut le voir souvent sur son ordinateur ainsi
+    que son téléphone, on remarque que les WIFI ou données cellulaires ne sont
+    pas déconnecter. Enfin, pour ne pas se faire traquer, Benjamin jette des
+    appareils électriques qui sont en bon états.
+</p>
+<img src="img/codepoursuite/telephones.jpg" alt="telephones.jpg" width="667" height="375">
+<p>
+    Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
+    secrets ainsi que sa mère polluent également. Ils gardent énormément de
+    dossiers sur leurs appareils, téléchargent des codes pour leur plan final
+    qui consiste à changer les pensées des gens. De plus, ils possèdent des
+    machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
+    leur permettraient d’obtenir leur résultat voulu.
+</p>
+<img src="img/codepoursuite/integration.png" alt="integration.png" width="710" height="444">
+<p>
+    Bande annonce de Code Poursuite:
+</p>
+<img src="img/codepoursuite/bande-annonce.jpg" alt="bande-annonce.jpg" width="1280" height="720">
+<p>
+    Galerie
+</p>
+<p>
+    Pollution numérique
+</p>
+<p>
+    Article suivant
+</p>
+<p>
+    Nina BELLINO A1
+</p>
+<p>
+    nina.bellin06@gmail.com
+</p>
+<p>
+    Projet réaliser dans le cadre d'un exercice pédagogique au département MMI de Montbéliard
+</p>
+<p>
+    MMI Montbéliard
+</p>
 </body>
 </html>
