Article: Pollution numérique

--- a/Pollution.html
+++ b/Pollution.html
@@ -2,9 +2,102 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/mescss/menu.css">
     <title>Pollution</title>
 </head>
 <body>
-
+<p>
+    Data Code
+</p>
+<p>
+    Un clic ! C'est tout !
+</p>
+<img src="img/pollution/terre.jpg" alt="terre.jpg" width="700" height="1244">
+<h1>Pollution numérique</h1>
+<p>
+    Le numérique est responsable de près de 4% des émissions de gaz à effet de serre dans le monde, d’après l’ADEME .
+</p>
+<p>
+    Savais-tu qu'internet pollue?
+</p>
+<p>
+    Encore aujourd'hui, peu de personnes le savent, mais le numérique est un
+    domaine très polluant. Il y aurait environ 4.1 milliards d'utilisateurs
+    avec 34 milliards d'appareils numériques. Lorsque nous parlons de la
+    pollution numérique nous incluant la fabrication des appareils électriques,
+    l'utilisation de chaque usager ainsi que les déchets numériques. Les
+    émissions de gaz à effet de serre du au domaine du numérique font 25% des
+    infrastructures réseau, 25% des data center et 47% des équipements des
+    consommateurs.
+</p>
+<img src="img/pollution/data-center.jpg" alt="data-center.jpg" width="1200" height="800">
+<p>
+    Internet est composé de nombreux équipements informatiques, qui permettent
+    de stocker et de transférer des données. Les objets numériques produisent
+    des émissions de CO₂. C’est ce qu’on appelle le poids carbone. De plus, un
+    simple ordinateur est considérablement composé d’éléments, principalement
+    avec du plastique. C’est-à-dire qu’il contribue à la pollution plastique
+    ainsi qu’à la pollution numérique.
+</p>
+<img src="img/pollution/ordinateur.jpg" alt="ordinateur.jpg" width="932" height="582">
+<p>
+    Pour te donner un exemple, 8 à 10 milliards de mails sont échangés en 1
+    heure. Tous les mails que tu possèdes reste stockés dans les data center,
+    donc ils prennent de la place et polluent en même temps. Si en plus, tu
+    rajoutes des pièces jointes, tes mails deviennent plus lourd. Les data
+    center sont des centres où sont stocker des données, il existe plus de 3
+    300 data center dans le monde.
+</p>
+<img src="img/pollution/internet.jpg" alt="internet.jpg" width="1181" height="676">
+<p>
+    La vie de notre planète se dégrade
+</p>
+<p>
+    "La pollution numérique est une pollution invisible qui grandit à une
+    vitesse vertigineuse. Elle est la conséquence directe de la digitalisation
+    de nos sociétés." d'après le fondateur de Cleanfox, Edouard Nattée.
+    Ce que certaines personnes ne savent pas c'est quelles polluent plus que
+    deux personnes réunit. Tu possèdes peut-être un ordinateur et un téléphone
+    mais d'autres possèdent trois ordinateurs ainsi que deux téléphones, qui
+    peut-être ou pas pour leur travail et en plus de cela, ils ont une tablette
+    et d'autres appareils connectés. Ce qui veut dire, que contrairement à toi,
+    eux, vont polluer deux à trois fois plus que toi. Car, comme tu t’en
+    doutes, plus on a d'appareils connectés, plus on utilise internet ou tout
+    simplement ses appareils et donc on pollue plus. Aujourd’hui 3 français sur
+    4 ont un téléphone, avec 98% des 18-24ans.
+</p>
+<img src="img/pollution/adolescents.jpg" alt="adolescents.png" width="1197" height="450">
+<p>
+    Il y a encore énormément de système qui pollue, comme le streaming, ou bien
+    les applications qui réunissent des vidéos comme Netflix et YouTube, de
+    plus, les réseaux sociaux, les commandes faites sur internet, le
+    e-commerce, polluent également, ainsi que les recherches sur Google et
+    chaque messages /vidéos envoyés.
+</p>
+<img src="img/pollution/applications.jpg" alt="applications.jpg" width="1280" height="640">
+<p>
+    Tu peux à présent visionner l'interview, réalisé dans le cadre d'un
+    exercice pédagogique au département MMi de Montbéliard, sur la thématique
+    de The Dark Side of The Web.
+</p>
+<img src="img/pollution/vidéo.jpg" alt="vidéo.jpg" width="1340" height="906">
+<p>
+    Moins polluer autrement
+</p>
+<p>
+    Article suivant
+</p>
+<p>
+    Nina BELLINO A1
+</p>
+<p>
+    nina.bellin06@gmail.com
+</p>
+<p>
+    Projet réaliser dans le cadre d'un exercice pédagogique au département MMI de Montbéliard
+</p>
+<p>
+    MMI Montbéliard
+</p>
 </body>
 </html>
