Article: Moins polluer autrement

--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <title>Code Poursuite</title>
 </head>
 <body>
+
 <p>
     Data Code
 </p>
