--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -6,24 +6,25 @@
     <title>Code Poursuite</title>
 </head>
 <body>
-
+<img src="img/dc.png" class="dc" width="120" height="90">
+<img src="img/rectbleu.png" alt="rectbleu" width="375" height="60">
 <p>
     Data Code
 </p>
 <p>
     Un clic ! C'est tout !
 </p>
-<img src="img/codepoursuite/technologie.jpg" alt="technologie.jpg" width="1024" height="609">
+<img src="img/codepoursuite/haut-images.png" class="technologie" width="578" height="470">
 <h1>Benjamin le hacker</h1>
 <p>
     Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
     lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
     heureusement que la technologie existe.
 </p>
-<p>
+<h2>
     Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
     la recherche de sa mère
-</p>
+</h2>
 <p>
     Internet fait partie de ton quotidien, que ce soit pour faire des
     recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
@@ -47,9 +48,9 @@
     afin que personnes ne puissent les traquer.
 </p>
 <img src="img/codepoursuite/codage.jpg" alt="codage.jpg" width="1334" height="750">
-<p>
+<h2>
     Cependant, Benjamin pollue sans le savoir
-</p>
+</h2>
 <p>
     Le personnage principal pollue avec le numérique tout le long du film. On
     peut voir qu’il laisse constamment ses appareils connectés et branchés et
