--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale-1.0">
     <title>Menu mobile</title>
     <link rel="stylesheet" href="css/lib/normalize.css">
-    <link rel="stylesheet" href="./css/mescss/styles-graphiques.css">
-    <link rel="stylesheet" href="./css/mescss/styles-mise-en-page.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
+    <link rel="stylesheet" href="./css/mescss/accueil.css">
+
 </head>
 <body class=" ">
 <header>
-    <h1><a href="">Menu mobile</a></h1>
     <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
         <div class="nav-toggle-bar"></div>
     </div>
@@ -29,10 +28,18 @@
             <li><a href="">Autres projets</a></li>
             <div id="trait_dessus"><hr></div>
             <li><a href="">À propos</a></li>
-            <div id="trait_dessus"><hr></div>
         </ul>
     </nav>
-
+    <div class="logo">
+        <img src="img/dc.png" height="74" width="94">
+    </div>
+    <div class="fond_header"></div>
+    <div class="titre_projet">
+        <p>Data Code</p>
+    </div>
+    <div class="titre_projet2">
+        <p>Un clic ! c'est tout !</p>
+    </div>
 </header>
 </body>
 </html>
