--- a/index.html
+++ b/index.html
@@ -41,5 +41,19 @@
         <p>Un clic ! c'est tout !</p>
     </div>
 </header>
+
+<div class="image1">
+    <img src="img/Accueil/hacker.png" height="812" width="375">
+</div>
+<div class="intro">
+    <p>Comment Benjamin peut-il limiter son impact environnementale et réduire la pollution numérique?</p>
+</div>
+<div class="intro2">
+    <p>Bienvenue sur "Data Code", sur ce site vous allez découvrir vôtre héro préféré, Benjamin, un ignorant de la pollution numérique.</p>
+</div>
+<div class="image3">
+    <img src="img/Accueil/benja_sav.png" height="189" width="336">
+</div>
+
 </body>
 </html>
