--- a/index.html
+++ b/index.html
@@ -51,9 +51,65 @@
 <div class="intro2">
     <p>Bienvenue sur "Data Code", sur ce site vous allez découvrir vôtre héro préféré, Benjamin, un ignorant de la pollution numérique.</p>
 </div>
-<div class="image3">
+
+<div class="image2">
     <img src="img/Accueil/benja_sav.png" height="189" width="336">
 </div>
+
+<div class="image3">
+    <img src="img/Accueil/ordi.png" height="812" width="375">
+</div>
+<div class="rect_titre1">
+    <img src="img/Accueil/titre1.png" height="176" width="314">
+</div>
+<div class="title1">
+    <p>Qui est Benjamin? Quel est son impact environnemental?</p>
+</div>
+<div class="fleche1">
+    <img src="img/Accueil/fleche1.png" height="29" width="51">
+</div>
+
+<div class="image4">
+    <img src="img/Accueil/mac.png" height="812" width="375">
+</div>
+<div class="rect_titre2">
+    <img src="img/Accueil/titre2.png" height="176" width="314">
+</div>
+<div class="title2">
+    <p>La pollution numérique, des personnes ne connaissent pas, mais qu'est ce donc?</p>
+</div>
+<div class="fleche2">
+    <img src="img/Accueil/fleche2.png" height="29" width="51">
+</div>
+
+<div class="image5">
+    <img src="img/Accueil/terre.png" height="812" width="375">
+</div>
+<div class="rect_titre3">
+    <img src="img/Accueil/titre3.png" height="176" width="314">
+</div>
+<div class="title3">
+    <p>Comment, pouvons-nous réduire notre impact environnemental en quelques clics.</p>
+</div>
+<div class="fleche3">
+    <img src="img/Accueil/fleche3.png" height="29" width="51">
+</div>
+
+<footer>
+    <div class="fond_footer"></div>
+    <div class="nom_prenom">
+        <p>Nina BELLINO A1</p>
+    </div>
+    <div class="mailto">
+        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
+    </div>
+    <div class="projet">
+        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
+    </div>
+    <div class="mmi_montbe">
+        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
+    </div
+</footer>
 
 </body>
 </html>
