fin accueil officiel

--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -2,104 +2,72 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale-1.0">
+    <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
+    <link rel="stylesheet" href="./css/mescss/Codepoursuite.css">
     <title>Code Poursuite</title>
 </head>
 <body>
-<img src="img/dc.png" class="dc" width="120" height="90">
-<img src="img/rectbleu.png" alt="rectbleu" width="375" height="60">
-<h1>
-    Data Code
-</h1>
-<h2>
-    Un clic ! C'est tout !
-</h2>
-<img src="img/codepoursuite/haut-images.png" class="technologie" width="578" height="470">
-<h1>Benjamin le hacker</h1>
-<p>
-    Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
-    lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
-    heureusement que la technologie existe.
-</p>
-<h2>
-    Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
-    la recherche de sa mère
-</h2>
-<p>
-    Internet fait partie de ton quotidien, que ce soit pour faire des
-    recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
-    « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
-    d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
-    est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
-    compétences informatiques afin de changer ses résultats scolaires lors d’un
-    test, pour lui et pour ses camarades de classe.
-</p>
-<img src="img/codepoursuite/benjamin.jpg" alt="benjamin.jpg" width="1080" height="720">
-<p>
-    Il ne s’est pas seulement contenté de changeait ses notes, il a également
-    hacker les services secrets danois afin de télécharger beaucoup de dossiers
-    confidentiels. Ses dossiers contenaient des informations importantes sur sa
-    mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
-    montre une vidéo d’elle vivante. Malheureusement, lorsqu'il a hacker les
-    services secrets danois, ce qu'il ne savait pas c'est qu'ils aller le
-    poursuivre. Car au final, ils sont tous à la recherche de la même personne,
-    Anna la mère de Benjamin. Malgré cela, Benjamin et son amie Savannah, ont
-    fui les services secrets. Ils n'ont pas hésiter à jeter leurs portables
-    afin que personnes ne puissent les traquer.
-</p>
-<img src="img/codepoursuite/codage.jpg" alt="codage.jpg" width="1334" height="750">
-<h2>
-    Cependant, Benjamin pollue sans le savoir
-</h2>
-<p>
-    Le personnage principal pollue avec le numérique tout le long du film. On
-    peut voir qu’il laisse constamment ses appareils connectés et branchés et
-    qu’il ne les éteint jamais. Il les laisse allumé ou en veille. Benjamin
-    possède plusieurs exemplaires d’appareils (plus de deux ordinateurs,
-    plusieurs téléphones…), de plus, il laisse ouverts beaucoup d’onglets
-    internet dessus. En plus de tout cela, il télécharge énormément des
-    dossiers, dont peut lui serve, ses dossiers occupent donc beaucoup de place
-    sur ses appareils. Lorsqu’il quitte son domicile, Benjamin n’éteint jamais
-    sa box internet, ceci consomme énormément et provoque de la pollution
-    numérique. Dans le film, on peut le voir souvent sur son ordinateur ainsi
-    que son téléphone, on remarque que les WIFI ou données cellulaires ne sont
-    pas déconnecter. Enfin, pour ne pas se faire traquer, Benjamin jette des
-    appareils électriques qui sont en bon états.
-</p>
-<img src="img/codepoursuite/telephones.jpg" alt="telephones.jpg" width="667" height="375">
-<p>
-    Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
-    secrets ainsi que sa mère polluent également. Ils gardent énormément de
-    dossiers sur leurs appareils, téléchargent des codes pour leur plan final
-    qui consiste à changer les pensées des gens. De plus, ils possèdent des
-    machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
-    leur permettraient d’obtenir leur résultat voulu.
-</p>
-<img src="img/codepoursuite/integration.png" alt="integration.png" width="710" height="444">
-<p>
-    Bande annonce de Code Poursuite:
-</p>
-<img src="img/codepoursuite/bande-annonce.jpg" alt="bande-annonce.jpg" width="1280" height="720">
-<p>
-    Galerie
-</p>
-<p>
-    Pollution numérique
-</p>
-<p>
-    Article suivant
-</p>
-<p>
-    Nina BELLINO A1
-</p>
-<p>
-    nina.bellin06@gmail.com
-</p>
-<p>
-    Projet réaliser dans le cadre d'un exercice pédagogique au département MMI de Montbéliard
-</p>
-<p>
-    MMI Montbéliard
-</p>
+<header>
+    <div class="nav-toggle" onclick="document.documentElement.classList.toggle('menu-open')">
+        <div class="nav-toggle-bar"></div>
+    </div>
+    <nav class="menu" >
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Codepoursuite.html">Benjamin le hacker</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Pollution.html">Pollution numérique</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="Solutions.html">Moins polluer autrement</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="autres-projets.html">Autres projets</a></li>
+            <div id="trait_dessus"><hr></div>
+            <li><a href="a-propos.html">À propos</a></li>
+        </ul>
+    </nav>
+    <div class="logo">
+        <img src="img/dc.png" height="74" width="94">
+    </div>
+    <div class="fond_header"></div>
+    <div class="titre_projet">
+        <p>Data Code</p>
+    </div>
+    <div class="titre_projet2">
+        <p>Un clic ! c'est tout !</p>
+    </div>
+</header>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer>
+    <div class="fond_footer"></div>
+    <div class="nom_prenom">
+        <p>Nina BELLINO A1</p>
+    </div>
+    <div class="mailto">
+        <a href="mailto:nina.bellin06@gmail"><p>nina.bellin06@gmail.com</p></a>
+    </div>
+    <div class="projet">
+        <p>Projet réalisé dans le cadre d'un exercice pédagogique au département MMI de Montbéliard</p>
+    </div>
+    <div class="mmi_montbe">
+        <a href="http://mmimontbeliard.com/"><p>MMI Montbéliard</p></a>
+    </div
+</footer>
 </body>
 </html>
