--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </div>
     <nav class="menu" >
         <ul>
-            <li><a href="">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <div id="trait_dessus"><hr></div>
-            <li><a href="">Benjamin le hacker</a></li>
+            <li><a href="Codepoursuite.html">Benjamin le hacker</a></li>
             <div id="trait_dessus"><hr></div>
-            <li><a href="">Pollution numérique</a></li>
+            <li><a href="Pollution.html">Pollution numérique</a></li>
             <div id="trait_dessus"><hr></div>
-            <li><a href="">Moins polluer autrement</a></li>
+            <li><a href="Solutions.html">Moins polluer autrement</a></li>
             <div id="trait_dessus"><hr></div>
-            <li><a href="">Autres projets</a></li>
+            <li><a href="autres-projets.html">Autres projets</a></li>
             <div id="trait_dessus"><hr></div>
-            <li><a href="">À propos</a></li>
+            <li><a href="a-propos.html">À propos</a></li>
         </ul>
     </nav>
     <div class="logo">
@@ -60,39 +60,39 @@
     <img src="img/Accueil/ordi.png" height="812" width="375">
 </div>
 <div class="rect_titre1">
-    <img src="img/Accueil/titre1.png" height="176" width="314">
+    <a href="Codepoursuite.html"><img src="img/Accueil/titre1.png" height="176" width="314"></a>
 </div>
 <div class="title1">
-    <p>Qui est Benjamin? Quel est son impact environnemental?</p>
+    <a href="Codepoursuite.html"><p>Qui est Benjamin? Quel est son impact environnemental?</p></a>
 </div>
 <div class="fleche1">
-    <img src="img/Accueil/fleche1.png" height="29" width="51">
+    <a href="Codepoursuite.html"><img src="img/Accueil/fleche1.png" height="29" width="51"></a>
 </div>
 
 <div class="image4">
     <img src="img/Accueil/mac.png" height="812" width="375">
 </div>
 <div class="rect_titre2">
-    <img src="img/Accueil/titre2.png" height="176" width="314">
+    <a href="Pollution.html"><img src="img/Accueil/titre2.png" height="176" width="314"></a>
 </div>
 <div class="title2">
-    <p>La pollution numérique, des personnes ne connaissent pas, mais qu'est ce donc?</p>
+    <a href="Pollution.html"><p>La pollution numérique, des personnes ne connaissent pas, mais qu'est ce donc?</p></a>
 </div>
 <div class="fleche2">
-    <img src="img/Accueil/fleche2.png" height="29" width="51">
+    <a href="Pollution.html"><img src="img/Accueil/fleche2.png" height="29" width="51"></a>
 </div>
 
 <div class="image5">
     <img src="img/Accueil/terre.png" height="812" width="375">
 </div>
 <div class="rect_titre3">
-    <img src="img/Accueil/titre3.png" height="176" width="314">
+    <a href="Solutions.html"><img src="img/Accueil/titre3.png" height="176" width="314"></a>
 </div>
 <div class="title3">
-    <p>Comment, pouvons-nous réduire notre impact environnemental en quelques clics.</p>
+    <a href="Solutions.html"><p>Comment, pouvons-nous réduire notre impact environnemental en quelques clics.</p></a>
 </div>
 <div class="fleche3">
-    <img src="img/Accueil/fleche3.png" height="29" width="51">
+    <a href="Solutions.html"><img src="img/Accueil/fleche3.png" height="29" width="51"></a>
 </div>
 
 <footer>
