--- a/Codepoursuite.html
+++ b/Codepoursuite.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale-1.0">
     <link rel="stylesheet" href="css/lib/normalize.css">
     <link rel="stylesheet" href="./css/mescss/menu.css">
+    <link rel="stylesheet" href="./css/mescss/typography.css">
     <link rel="stylesheet" href="./css/mescss/Codepoursuite.css">
     <title>Code Poursuite</title>
 </head>
@@ -41,18 +42,191 @@
 </header>
 
 
+<div class="haut-image">
+    <img src="img/codepoursuite/prem_img.png" width="375" height="812">
+</div>
+<div class="rect-marine"></div>
+<div class="haut-image2">
+    <img src="img/codepoursuite/table.jpg" width="335" height="223">
+</div>
+<div class="leg1">
+    <p>Image de Benjamin et Savannah, Google Image</p>
+</div>
+
+<div class="titre_ben">
+    <p>Benjamin le hacker</p>
+</div>
+<div class="sous-titre1">
+    <p>Orphelin de 13 ans au Danemark, il recherche sa mère qu’il pensait décéder
+        lors d’un accident de la route. Il n’était jusque-là pas une menace. Mais
+        heureusement que la technologie existe.
+    </p>
+</div>
+<div class="inter-titre1">
+    <p>Benjamin : jamais sans son ordinateur, est un jeune pirate informatique à
+        la recherche de sa mère
+    </p>
+</div>
 
 
+<div class="texte1">
+    <p>
+        Internet fait partie de ton quotidien, que ce soit pour faire des
+        recherches ou bien jouer à des jeux. Comme pour Benjamin, le héros du film
+        « Code Poursuite ». On remarque que dans ce film, Benjamin se sert
+        d’internet, pour les réseaux sociaux ou bien pour hacker des systèmes. Il
+        est très fort pour hacker les ordinateurs, il a par exemple utilisé ses
+        compétences informatiques afin de changer ses résultats scolaires lors d’un
+        test, pour lui et pour ses camarades de classe.
+    </p>
+</div>
+<div class="img3">
+    <img src="img/codepoursuite/ben.png" width="375" height="270">
+</div>
+<div class="leg2">
+    <p>Benjamin qui utilise son ordinateur, Google Image</p>
+</div>
+
+<div class="texte2">
+    <p>Il ne s’est pas seulement contenté de changeait ses notes, il a également
+        hacker les services secrets danois afin de télécharger beaucoup de dossiers
+        confidentiels. Ses dossiers contenaient des informations importantes sur sa
+        mère qu’il pensait décédé, jusqu’à ce les services policiers danois lui
+        montre une vidéo d’elle vivante. Malheureusement, lorsqu'il a hacker les
+        services secrets danois, ce qu'il ne savait pas c'est qu'ils aller le
+        poursuivre. Car au final, ils sont tous à la recherche de la même personne,
+        Anna la mère de Benjamin. Malgré cela, Benjamin et son amie Savannah, ont
+        fui les services secrets. Ils n'ont pas hésiter à jeter leurs portables
+        afin que personnes ne puissent les traquer.
+    </p>
+</div>
+<div class="img4">
+    <img src="img/codepoursuite/codage.jpg" width="375" height="270">
+</div>
+<div class="leg3">
+    <p>Benjamin pirate l’ordinateur de sa professeur, Capture d'écran du film Code Poursuite</p>
+</div>
 
 
+<div class="inter-titre2">
+    <p>
+        Cependant, Benjamin pollue sans le savoir
+    </p>
+</div>
+<div class="texte3">
+    <p>
+        Le personnage principal pollue avec le numérique tout le long du film. On
+        peut voir qu’il laisse constamment ses appareils connectés et branchés et
+        qu’il ne les éteint jamais. Il les laisse allumé ou en veille. Benjamin
+        possède plusieurs exemplaires d’appareils (plus de deux ordinateurs,
+        plusieurs téléphones…), de plus, il laisse ouverts beaucoup d’onglets
+        internet dessus. En plus de tout cela, il télécharge énormément des
+        dossiers, dont peut lui serve, ses dossiers occupent donc beaucoup de place
+        sur ses appareils. Lorsqu’il quitte son domicile, Benjamin n’éteint jamais
+        sa box internet, ceci consomme énormément et provoque de la pollution
+        numérique. Dans le film, on peut le voir souvent sur son ordinateur ainsi
+        que son téléphone, on remarque que les WIFI ou données cellulaires ne sont
+        pas déconnecter. Enfin, pour ne pas se faire traquer, Benjamin jette des
+        appareils électriques qui sont en bon états.
+    </p>
+</div>
+<div class="img5">
+    <img src="img/codepoursuite/telephones.jpg" width="375" height="270">
+</div>
+<div class="leg4">
+    <p>
+        Benjamin jette son téléphone ainsi que celui de son amie alors qu’ils sont fonctionnels,
+    </p>
+</div>
+<div class="leg4_2">
+    <p>
+        Capture d'écran du film Code Poursuite
+    </p>
+</div>
 
+<div class="texte4">
+    <p>
+        Mais comme on peut le voir, ce n’est pas le seul à polluer, les services
+        secrets ainsi que sa mère polluent également. Ils gardent énormément de
+        dossiers sur leurs appareils, téléchargent des codes pour leur plan final
+        qui consiste à changer les pensées des gens. De plus, ils possèdent des
+        machines qui utilisent pour tester chaque code jusqu’à trouver le bon qui
+        leur permettraient d’obtenir leur résultat voulu.
+    </p>
+</div>
+<div class="img6">
+    <img src="img/codepoursuite/integration.png" width="375" height="270">
+</div>
+<div class="leg5">
+    <p>
+        Algorithme écrit sur un ordinateur, Pintesrest
+    </p>
+</div>
 
+<div class="bande_annonce">
+    <p>
+        Bande annonce de Code Poursuite:
+    </p>
+</div>
+<div class="video">
+    <iframe width="375" height="211" src="https://www.youtube.com/embed/D1sDT-KYgYM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 
+<div class="galerie">
+    <p>
+        Galerie
+    </p>
+</div>
+<div class="back_galerie"></div>
 
+<main>
+    <section class="carousel">
+        <ul class="carousel-items">
+            <li class="imag_1">
+                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=234164.html"><img src="img/films/imag_1.jpg" height="356" width="267">
+                <p>The Circle</p></a>
+            </li>
+            <li class="imag_2">
+                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=229831.html"><img src="img/films/imag_2.jpg" height="357" width="267">
+                <p>Ready Player One</p></a>
+            </li>
+            <li class="imag_3">
+                <a href="https://www.allocine.fr/film/fichefilm_gen_cfilm=235120.html"><img src="img/films/imag_3.jpg" height="357" width="267">
+                <p>Nerve</p></a>
+            </li>
+            <li class="imag_4">
+                <a href="https://www.allocine.fr/video/player_gen_cmedia=19552491&cserie=17966.html"><img src="img/films/imag_4.jpg" height="350" width="265" >
+                <p>Mr. Robot</p></a>
+            </li>
+            <li class="imag_5">
+                <a href="https://www.allocine.fr/video/player_gen_cmedia=19584038&cserie=24940.html"><img src="img/films/imag_5.jpg" height="350" width="263">
+                <p>How to sell drugs online</p></a>
+            </li>
+            <li class="imag_6">
+                <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=10855.html"><img src="img/films/imag_6.jpg" height="350" width="263">
+                <p>Black Mirror</p></a>
+            </li>
+            <li class="imag_7">
+                <a href="https://www.allocine.fr/series/ficheserie_gen_cserie=26491.html"><img src="img/films/imag_7.jpg" height="350" width="263">
+                <p>Control Z</p></a>
+            </li>
+        </ul>
+    </section>
+</main>
 
-
-
-
+<div class="bouton">
+    <a href="Pollution.html"><img src="img/codepoursuite/bouton.png" height="72" width="296"></a>
+</div>
+<div class="tex-clic">
+    <a href="Pollution.html"><p>
+        Pollution numérique
+    </p></a>
+</div>
+<div class="tex-clic2">
+    <a href="Pollution.html"><p>
+        Article suivant
+    </p></a>
+</div>
 
 <footer>
     <div class="fond_footer"></div>
