--- a/Pollution.html
+++ b/Pollution.html
@@ -45,6 +45,92 @@
     <img src="img/pollution/earth.png" width="375" height="666">
 </div>
 
+<div class="titr-art">
+    <p>
+        Pollution numérique
+    </p>
+</div>
+<div class="sous-titre2">
+    <p>
+        Le numérique est responsable de près de 4% des émissions de gaz à effet de serre dans le monde, d’après l’ADEME .
+    </p>
+</div>
+
+<div class="inter-titre2_1">
+    <p>
+        Savais-tu qu'internet pollue?
+    </p>
+</div>
+<div class="art-1">
+    <p>
+        Encore aujourd'hui, peu de personnes le savent, mais le numérique est un
+        domaine très polluant. Il y aurait environ 4.1 milliards d'utilisateurs
+        avec 34 milliards d'appareils numériques. Lorsque nous parlons de la
+        pollution numérique nous incluant la fabrication des appareils électriques,
+        l'utilisation de chaque usager ainsi que les déchets numériques. Les
+        émissions de gaz à effet de serre du au domaine du numérique font 25% des
+        infrastructures réseau, 25% des data center et 47% des équipements des
+        consommateurs.
+    </p>
+</div>
+<div class="data-center">
+    <img src="img/pollution/data-center.png" width="375" height="250">
+</div>
+<div class="legd1">
+    <p>
+        Benjamin qui utilise son ordinateur, Google Image
+    </p>
+</div>
+
+<div class="art-2">
+    <p>
+        Internet est composé de nombreux équipements informatiques, qui permettent
+        de stocker et de transférer des données. Les objets numériques produisent
+        des émissions de CO₂. C’est ce qu’on appelle le poids carbone. De plus, un
+        simple ordinateur est considérablement composé d’éléments, principalement
+        avec du plastique. C’est-à-dire qu’il contribue à la pollution plastique
+        ainsi qu’à la pollution numérique.
+    </p>
+</div>
+<div class="ordi_vue">
+    <img src="img/pollution/ordi_vue.png" width="279" height="174">
+</div>
+<div class="legd2">
+    <p>
+        Composition d'un ordinateur,
+    </p>
+</div>
+<div class="legd3">
+    <p>
+        Google Image
+    </p>
+</div>
+
+<div class="art-3">
+    <p>
+        Pour te donner un exemple, 8 à 10 milliards de mails sont échangés en 1
+        heure. Tous les mails que tu possèdes reste stockés dans les data center,
+        donc ils prennent de la place et polluent en même temps. Si en plus, tu
+        rajoutes des pièces jointes, tes mails deviennent plus lourd. Les data
+        center sont des centres où sont stocker des données, il existe plus de 3
+        300 data center dans le monde.
+    </p>
+</div>
+<div class="inter">
+    <img src="img/pollution/inter.png" width="404" height="231">
+</div>
+<div class="legd4">
+    <p>
+        Parcours d'un mail, Google Image
+    </p>
+</div>
+
+<div class="inter-titre2_2">
+    <p>
+        La vie de notre planète se dégrade
+    </p>
+</div>
+
 
 
 
