début de la page solutions

--- a/Pollution.html
+++ b/Pollution.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/mescss/menu.css">
     <link rel="stylesheet" href="./css/mescss/typography.css">
     <link rel="stylesheet" href="./css/mescss/Pollution.css">
-    <title>Code Poursuite</title>
+    <title>Pollution</title>
 </head>
 <body>
 <header>
@@ -117,7 +117,7 @@
     </p>
 </div>
 <div class="inter">
-    <img src="img/pollution/inter.png" width="404" height="231">
+    <img src="img/pollution/inter.png" width="375" height="231">
 </div>
 <div class="legd4">
     <p>
@@ -147,7 +147,7 @@
     </p>
 </div>
 <div class="jeunes">
-    <img src="img/pollution/jeune.png" width="482" height="181">
+    <img src="img/pollution/jeune.png" width="375" height="181">
 </div>
 <div class="legd5">
     <p>
@@ -165,7 +165,7 @@
     </p>
 </div>
 <div class="phone">
-    <img src="img/pollution/phone.png" width="686" height="343">
+    <img src="img/pollution/phone.png" width="375" height="812">
 </div>
 <div class="legd6">
     <p>
@@ -181,7 +181,7 @@
     </p>
 </div>
 <div class="vid-inter">
-    <img src="img/pollution/vid.png" width="670" height="453">
+    <img src="img/pollution/vid.png" width="375" height="812">
 </div>
 <div class="play">
     <img src="img/pollution/play.png" width="89" height="89">
